--- a/AdvancedSelectors/index.html
+++ b/AdvancedSelectors/index.html
@@ -17,8 +17,12 @@
 	<div class="section2">
 		<h3>So how do we fix it? </h3>
 		<p>Fortunately, CSS has the power to select specific elemtents without giving all of them specific id's or classes.  For example, the paragraph has been created as a child element of the div with the class "section2".  Therefore, I could select any child element of "section2" like this:</p>
-		<img src="images/cssexample.jpg" alt="CSS Selector">
+		<img src="images/cssexample.png" alt="CSS Selector">
+	</div>
 
+	<div class="section3">
+		<h3>Resources:</h3>
+		<p>In order to find out more, and see a screen cast on this items, you should head here: <a href="#">text</a>.  You will need to download the files/folders onto your computer and work with them there </p>
 	</div>
 
 
