--- a/AdvancedSelectors/index.html
+++ b/AdvancedSelectors/index.html
@@ -23,6 +23,8 @@
 	<div class="section3">
 		<h3>Resources:</h3>
 		<p>In order to find out more, and see a screen cast on this items, you should head here: <a href="#">text</a>.  You will need to download the files/folders onto your computer and work with them there </p>
+		<h3>Your final answer will look like this: </h3>
+		<img src="images/finalproduct.jpg" alt="screen shot">
 	</div>
 
 
