More updates with links.

--- a/AdvancedSelectors/index.html
+++ b/AdvancedSelectors/index.html
@@ -22,7 +22,7 @@
 
 	<div class="section3">
 		<h3>Resources:</h3>
-		<p>In order to find out more, and see a screen cast on this items, you should head here: <a href="#">text</a>.  You will need to download the files/folders onto your computer and work with them there </p>
+		<p>In order to find out more, and see a screen cast on this items, you should head here: <a href="#">text</a>.  You will need to download the files/folders onto your computer and work with them there.  If you need more help with advanced selectors, you should research them, although this <a href="https://www.khanacademy.org/computing/computer-programming/html-css/more-css-selectors/p/css-descendant-selectors#">Khan Academy Link</a> is pretty helpful. </p>
 		<h3>Your final answer will look like this: </h3>
 		<img src="images/finalproduct.jpg" alt="screen shot">
 	</div>
