Spelling Mistake Fix

--- a/AdvancedSelectors/index.html
+++ b/AdvancedSelectors/index.html
@@ -10,20 +10,20 @@
 
 	<div class="section1">
 		<h3>Sometimes you want to select all tags in an HTML page..</h3>
-		<p>However, most of the time you want to style only specific tags that you've coded in HTML.  Selecting them all in your CSS is no necessarily going to be the best thing for you to do all the time.  </p>
+		<p>However, most of the time you want to style only specific tags that you've coded in HTML.  Selecting them all in your CSS is not necessarily going to be the best thing for you to do all the time.  </p>
 		<p>As an example, maybe you want some paragraphs (like this one) to be the color purple.  If you simply code a <span>p</span> as your selector in CSS, it will select every paragraph in your webpage.</p>
 	</div>
 
 	<div class="section2">
 		<h3>So how do we fix it? </h3>
-		<p>Fortunately, CSS has the power to select specific elemtents without giving all of them specific id's or classes.  For example, the paragraph has been created as a child element of the div with the class "section2".  Therefore, I could select any child element of "section2" like this:</p>
+		<p>Fortunately, CSS has the power to select specific elemtents without giving all of them specific id's or classes.  For example, this paragraph has been created as a child element of the div with the class "section2".  Therefore, I could select any child element of "section2" like this:</p>
 		<img src="images/cssexample.png" alt="CSS Selector">
 	</div>
 
 	<div class="section3">
 		<h3>Resources:</h3>
 		<p>In order to find out more, and see a screen cast on this items, you should head here: <a href="https://drive.google.com/folderview?id=0BwPIp9kXoT0OOVVPTVJlUzAzTE0&usp=sharing">text</a>.  You will need to download the files/folders onto your computer and work with them there.  If you need more help with advanced selectors, you should research them, although this <a href="https://www.khanacademy.org/computing/computer-programming/html-css/more-css-selectors/p/css-descendant-selectors#">Khan Academy Link</a> is pretty helpful. </p>
-		<h3>Your final answer will look like this: </h3>
+		<h3>Your final answer will look like this (This is a screen shot): </h3>
 		<img src="images/finalproduct.jpg" alt="screen shot">
 	</div>
 
